@@ -28,12 +28,7 @@
  *          javac crash while creating LVT entry for a local variable defined in
  *          an inner block
  * @library /tools/javac/lib
- * @modules java.base/jdk.internal.classfile
- *          java.base/jdk.internal.classfile.attribute
- *          java.base/jdk.internal.classfile.constantpool
- *          java.base/jdk.internal.classfile.instruction
- *          java.base/jdk.internal.classfile.components
- *          java.base/jdk.internal.classfile.impl
+ * @modules jdk.jdeps/com.sun.tools.classfile
  * @build JavacTestingAbstractProcessor LVTHarness
  * @run main LVTHarness
  */
@@ -59,10 +54,19 @@ import javax.tools.StandardJavaFileManager;
 import javax.tools.ToolProvider;
 
 import com.sun.source.util.JavacTask;
-import jdk.internal.classfile.*;
-import jdk.internal.classfile.attribute.*;
+import com.sun.tools.classfile.Attribute;
+import com.sun.tools.classfile.ClassFile;
+import com.sun.tools.classfile.ConstantPool;
+import com.sun.tools.classfile.ConstantPoolException;
+import com.sun.tools.classfile.Code_attribute;
+import com.sun.tools.classfile.ConstantPool.InvalidIndex;
+import com.sun.tools.classfile.ConstantPool.UnexpectedEntry;
+import com.sun.tools.classfile.Descriptor.InvalidDescriptor;
+import com.sun.tools.classfile.LocalVariableTable_attribute;
+import com.sun.tools.classfile.Method;
 
 import static javax.tools.StandardLocation.*;
+import static com.sun.tools.classfile.LocalVariableTable_attribute.Entry;
 import static javax.tools.JavaFileObject.Kind.SOURCE;
 
 public class LVTHarness {
@@ -75,10 +79,10 @@ public class LVTHarness {
     public static void main(String[] args) throws Exception {
         try {
             String testDir = System.getProperty("test.src");
-            fm.setLocation(SOURCE_PATH, List.of(new File(testDir, "tests")));
+            fm.setLocation(SOURCE_PATH, Arrays.asList(new File(testDir, "tests")));
 
             // Make sure classes are written to scratch dir.
-            fm.setLocation(CLASS_OUTPUT, List.of(new File(".")));
+            fm.setLocation(CLASS_OUTPUT, Arrays.asList(new File(".")));
 
             for (JavaFileObject jfo : fm.list(SOURCE_PATH, "", Collections.singleton(SOURCE), true)) {
                 new LVTHarness(jfo).check();
@@ -125,27 +129,31 @@ public class LVTHarness {
         }
     }
 
-    void checkClassFile(File file) throws IOException {
-        ClassModel classFile = Classfile.of().parse(file.toPath());
+    void checkClassFile(File file)
+            throws IOException, ConstantPoolException, InvalidDescriptor {
+        ClassFile classFile = ClassFile.read(file);
+        ConstantPool constantPool = classFile.constant_pool;
 
         //lets get all the methods in the class file.
-        for (MethodModel method : classFile.methods()) {
+        for (Method method : classFile.methods) {
             for (ElementKey elementKey: aliveRangeMap.keySet()) {
-                String methodDesc = method.methodName().stringValue() +
-                        parse(method.methodTypeSymbol().descriptorString()).replace(" ", "");
+                String methodDesc = method.getName(constantPool) +
+                        method.descriptor.getParameterTypes(constantPool).replace(" ", "");
                 if (methodDesc.equals(elementKey.elem.toString())) {
-                    checkMethod(method, aliveRangeMap.get(elementKey));
+                    checkMethod(constantPool, method, aliveRangeMap.get(elementKey));
                     seenAliveRanges.add(elementKey);
                 }
             }
         }
     }
 
-    void checkMethod(MethodModel method, AliveRanges ranges) {
-        CodeAttribute code = method.findAttribute(Attributes.CODE).orElseThrow();
-        LocalVariableTableAttribute lvt = code.findAttribute(Attributes.LOCAL_VARIABLE_TABLE).orElseThrow();
+    void checkMethod(ConstantPool constantPool, Method method, AliveRanges ranges)
+            throws InvalidIndex, UnexpectedEntry, ConstantPoolException {
+        Code_attribute code = (Code_attribute) method.attributes.get(Attribute.Code);
+        LocalVariableTable_attribute lvt =
+            (LocalVariableTable_attribute) (code.attributes.get(Attribute.LocalVariableTable));
         List<String> infoFromRanges = convertToStringList(ranges);
-        List<String> infoFromLVT = convertToStringList(lvt);
+        List<String> infoFromLVT = convertToStringList(constantPool, lvt);
 
         // infoFromRanges most be contained in infoFromLVT
         int i = 0;
@@ -162,7 +170,7 @@ public class LVTHarness {
         }
 
         if (i < infoFromRanges.size()) {
-            error(infoFromLVT, infoFromRanges, method.methodName().stringValue());
+            error(infoFromLVT, infoFromRanges, method.getName(constantPool).toString());
         }
     }
 
@@ -178,11 +186,12 @@ public class LVTHarness {
         return result;
     }
 
-    List<String> convertToStringList(LocalVariableTableAttribute lvt) {
+    List<String> convertToStringList(ConstantPool constantPool,
+            LocalVariableTable_attribute lvt) throws InvalidIndex, UnexpectedEntry {
         List<String> result = new ArrayList<>();
-        for (LocalVariableInfo entry : lvt.localVariables()) {
-            String str = formatLocalVariableData(entry.name().stringValue(),
-                    entry.startPc(), entry.length());
+        for (Entry entry : lvt.local_variable_table) {
+            String str = formatLocalVariableData(constantPool.getUTF8Value(entry.name_index),
+                    entry.start_pc, entry.length);
             result.add(str);
         }
         Collections.sort(result);
@@ -281,58 +290,6 @@ public class LVTHarness {
         public String toString() {
             return "Key{" + key + "}";
         }
-    }
-
-    private String parse(String desc) {
-        int end = desc.indexOf(")");
-        if (end == -1)
-            throw new AssertionError();
-        end ++;
-        int p = 0;
-        StringBuilder sb = new StringBuilder();
-        int dims = 0;
-
-        while (p < end) {
-            String type;
-            switch (desc.charAt(p++)) {
-                case '(' -> {
-                    sb.append('(');
-                    continue;
-                }
-                case ')' -> {
-                    sb.append(')');
-                    continue;
-                }
-                case '[' -> {
-                    dims++;
-                    continue;
-                }
-                case 'B' -> type = "byte";
-                case 'C' -> type = "char";
-                case 'D' -> type = "double";
-                case 'F' -> type = "float";
-                case 'I' -> type = "int";
-                case 'J' -> type = "long";
-                case 'L' -> {
-                    int sep = desc.indexOf(';', p);
-                    if (sep == -1)
-                        throw new AssertionError();
-                    type = desc.substring(p, sep).replace('/', '.');
-                    p = sep + 1;
-                }
-                case 'S' -> type = "short";
-                case 'Z' -> type = "boolean";
-                case 'V' -> type = "void";
-                default -> throw new AssertionError();
-            }
-
-            if (sb.length() > 1 && sb.charAt(0) == '(')
-                sb.append(", ");
-            sb.append(type);
-            for ( ; dims > 0; dims-- )
-                sb.append("[]");
-        }
-        return sb.toString();
     }
 
 }
